--- a/frontend/src/app/views/book-page/book-page.component.html
+++ b/frontend/src/app/views/book-page/book-page.component.html
@@ -66,28 +66,12 @@
                 <div #divElement id="review{{review.id}}" class="review-comment truncate">
                   <span #htmlSpanElement> Comment: {{review.comment}}</span>
                   <div *ngIf="htmlSpanElement.offsetWidth > divElement.offsetWidth">
-                    <a type="button" class="help-icon-down fa" (click)="toggleClass('review'+review.id)"
+                    <a type="button" class="help-icon-down fa" (click)="toggleClassForComment('review'+review.id)"
                        style="color: #435ebe">More</a>
                   </div>
-                  <a type="button" class="help-icon-up fa" (click)="toggleClass('review'+review.id)"
+                  <a type="button" class="help-icon-up fa" (click)="toggleClassForComment('review'+review.id)"
                      style="color: #435ebe">Hide</a>
                 </div>
-
-                <!--              <div id="comment{{review.id}}" class="collapse" aria-expanded="false">-->
-                <!--                <p>Comment: {{review.comment}}</p>-->
-                <!--              </div>-->
-                <!--              <div class="text-end" *ngIf="review.comment.length > 255">-->
-                <!--                <a type="button" data-placement="bottom" data-toggle="collapse"-->
-                <!--                   href="#comment{{review.id}}" title="More">-->
-                <!--                  &lt;!&ndash;              <em id="three-dots" class="fa fa-ellipsis-h"></em>&ndash;&gt;-->
-                <!--                  <em class="fa fa-angle-double-down" id="arrows-up"></em></a>-->
-                <!--              </div>-->
-                <!--              <div class="text-end" *ngIf="review.comment.length <= 255">-->
-                <!--                <a type="button" data-placement="bottom" data-toggle="collapse"-->
-                <!--                   href="#comment{{review.id}}" title="More">-->
-                <!--                  &lt;!&ndash;              <em id="three-dots" class="fa fa-ellipsis-h"></em>&ndash;&gt;-->
-                <!--                  More</a>-->
-                <!--              </div>-->
               </div>
             </div>
           </div>
@@ -115,14 +99,11 @@
             </td>
             <td>
               <ul class="pagination pagination-primary float-end dataTable-pagination"
-                  style="align-items: center;margin-bottom: 0px">
+                  style="align-items: center;margin-bottom: 0">
                 <li class="page-item pager"><a (click)="matPaginator.firstPage()" class="page-link"
                                                data-page="1"><em class="fa fa-step-backward"></em></a></li>
                 <li class="page-item pager"><a (click)="matPaginator.previousPage()" class="page-link"
                                                data-page="1"><em class="fa fa-arrow-left"></em></a></li>
-                <!--                <li class="page-item active"><a href="#" class="page-link" data-page="1">1</a></li>-->
-                <!--                <li class="page-item"><a href="#" class="page-link" data-page="2">2</a></li>-->
-                <!--                <li class="page-item"><a href="#" class="page-link" data-page="3">3</a></li>-->
                 <li class="page-item pager"><a (click)="matPaginator.nextPage()" class="page-link"
                                                data-page="2"><em class="fa fa-arrow-right"></em></a></li>
                 <li class="page-item pager"><a (click)="matPaginator.lastPage()" class="page-link"
