added top three authors card on main page

--- a/frontend/src/app/views/main-page/main-page.component.html
+++ b/frontend/src/app/views/main-page/main-page.component.html
@@ -1,9 +1,5 @@
-<body>
-
-</body>
-
-
-<section id="content-types">
+<body style="min-width: 800px">
+<section id="content-types" >
   <div class="row">
     <div class="col-xl-4 col-md-6 col-sm-12">
       <div class="card" id="booksByRating">
@@ -83,8 +79,8 @@
           </div>
         </div>
       </div>
-
     </div>
+
     <div class="col-xl-4 col-md-6 col-sm-12">
       <div class="card collapse-icon accordion-icon-rotate">
         <div class="card-header">
@@ -96,8 +92,8 @@
               <div class="card-body">
                 <div class="row">
                   <p>{{book.name}}</p>
-                  <div style="display: flex; align-items: center">
-                    <label class="book-card-info" style="margin-right: 10px">Rating:</label>
+                  <div style="display: flex; align-items: center; margin-bottom: 12px">
+                    <label class="book-card-info" style="margin-right: 5px; margin-bottom: 0">Rating:</label>
                     <div class="star-rating-book " title="{{book.rating}}/5">
                       <div class="star-value-book" [ngStyle]="{'width': (book.rating * 100 / 5)+ '%' } "></div>
                     </div>
@@ -110,78 +106,31 @@
         </div>
       </div>
     </div>
-    <!--    <div class="col-xl-4 col-md-6 col-sm-12">-->
-    <!--      <div class="card collapse-icon accordion-icon-rotate">-->
-    <!--        <div class="card-header">-->
-    <!--          <h1 class="card-title pl-1">Accordion</h1>-->
-    <!--        </div>-->
-    <!--        <div class="card-content">-->
-    <!--          <div class="card-body">-->
-    <!--            <div class="accordion" id="cardAccordion">-->
-    <!--              <div class="card">-->
-    <!--                <div class="card-header collapsed" id="headingOne" data-bs-toggle="collapse"-->
-    <!--                     data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne" role="button">-->
-    <!--                  <span class="collapsed collapse-title">Accordion Item 1</span>-->
-    <!--                </div>-->
-    <!--                <div id="collapseOne" class="pt-1 collapse" aria-labelledby="headingOne" data-parent="#cardAccordion"-->
-    <!--                     style="">-->
-    <!--                  <div class="card-body">-->
-    <!--                    Cheesecake muffin cupcake dragée lemon drops tiramisu cake-->
-    <!--                    gummies chocolate-->
-    <!--                    cake. Marshmallow tart-->
-    <!--                    croissant. Tart dessert tiramisu marzipan lollipop lemon drops.-->
-    <!--                  </div>-->
-    <!--                </div>-->
-    <!--              </div>-->
-    <!--              <div class="card collapse-header">-->
-    <!--                <div class="card-header" id="headingTwo" data-bs-toggle="collapse" data-bs-target="#collapseTwo"-->
-    <!--                     aria-expanded="false" aria-controls="collapseTwo" role="button">-->
-    <!--                  <span class="collapsed collapse-title">Accordion Item 2</span>-->
-    <!--                </div>-->
-    <!--                <div id="collapseTwo" class="collapse pt-1" aria-labelledby="headingTwo" data-parent="#cardAccordion">-->
-    <!--                  <div class="card-body">-->
-    <!--                    Pastry pudding cookie toffee bonbon jujubes jujubes powder-->
-    <!--                    topping. Jelly-->
-    <!--                    beans-->
-    <!--                    gummi bears sweet-->
-    <!--                    roll bonbon muffin liquorice. Wafer lollipop sesame snaps.-->
-    <!--                  </div>-->
-    <!--                </div>-->
-    <!--              </div>-->
-    <!--              <div class="card open">-->
-    <!--                <div class="card-header" id="headingThree" data-bs-toggle="collapse" data-bs-target="#collapseThree"-->
-    <!--                     aria-expanded="true" aria-controls="collapseThree" role="button">-->
-    <!--                  <span class="collapsed collapse-title">Accordion Item 3</span>-->
-    <!--                </div>-->
-    <!--                <div id="collapseThree" class="collapse show pt-1" aria-labelledby="headingThree"-->
-    <!--                     data-parent="#cardAccordion">-->
-    <!--                  <div class="card-body">-->
-    <!--                    Sweet pie candy jelly. Sesame snaps biscuit sugar plum. Sweet-->
-    <!--                    roll topping-->
-    <!--                    fruitcake. Caramels-->
-    <!--                    liquorice biscuit ice cream fruitcake cotton candy tart.-->
-    <!--                  </div>-->
-    <!--                </div>-->
-    <!--              </div>-->
-    <!--              <div class="card">-->
-    <!--                <div class="card-header collapsed" id="headingFour" data-bs-toggle="collapse"-->
-    <!--                     data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour" role="button">-->
-    <!--                  <span class="collapsed  collapse-title">Accordion Item 4</span>-->
-    <!--                </div>-->
-    <!--                <div id="collapseFour" class="pt-1 collapse" aria-labelledby="headingFour" data-parent="#cardAccordion"-->
-    <!--                     style="">-->
-    <!--                  <div class="card-body">-->
-    <!--                    Sweet pie candy jelly. Sesame snaps biscuit sugar plum. Sweet-->
-    <!--                    roll topping-->
-    <!--                    fruitcake. Caramels-->
-    <!--                    liquorice biscuit ice cream fruitcake cotton candy tart.-->
-    <!--                  </div>-->
-    <!--                </div>-->
-    <!--              </div>-->
-    <!--            </div>-->
-    <!--          </div>-->
-    <!--        </div>-->
-    <!--      </div>-->
-    <!--    </div>-->
+
+    <div class="col-xl-4 col-md-6 col-sm-12">
+      <div class="card collapse-icon accordion-icon-rotate">
+        <div class="card-header">
+          <h1 class="card-title pl-1" style="margin-bottom: 0">Top 3 authors</h1>
+        </div>
+        <div class="card-content">
+          <div class="card-body" *ngFor="let author of topThreeAuthors">
+            <div class="card">
+              <div class="card-body">
+                <div class="row">
+                  <p>{{author.firstName}} {{author.secondName}}</p>
+                  <div style="display: flex; align-items: center">
+                    <label class="book-card-info" style="margin-right: 5px; margin-bottom: 0">Rating:</label>
+                    <div class="star-rating-book " title="{{author.rating}}/5">
+                      <div class="star-value-book" [ngStyle]="{'width': (author.rating * 100 / 5)+ '%' } "></div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </section>
+</body>
