changed icons of star on main page

--- a/frontend/src/app/views/main-page/main-page.component.html
+++ b/frontend/src/app/views/main-page/main-page.component.html
@@ -11,64 +11,56 @@
                 <table class="table table-hover">
                   <thead>
                   <tr class="active">
-                    <th>Stars</th>
+                    <th>Rating</th>
                     <th class="text-center">Total count</th>
                   </tr>
                   </thead>
                   <tbody>
                   <tr>
                     <td>
-                      <span class="material-icons">star_outline</span>
-                      <span class="material-icons">star_outline</span>
-                      <span class="material-icons">star_outline</span>
-                      <span class="material-icons">star_outline</span>
-                      <span class="material-icons">star_outline</span>
+                      <div class="star-rating-book " title="0/5">
+                        <div class="star-value-book" style="width: 0"></div>
+                      </div>
                     </td>
                     <td class="text-center">{{zeroStarBooks}}</td>
                   </tr>
                   <tr>
                     <td>
-                      <span class="material-icons">star</span>
-                      <span class="material-icons">star_outline</span>
-                      <span class="material-icons">star_outline</span>
-                      <span class="material-icons">star_outline</span>
-                      <span class="material-icons">star_outline</span>
+                      <div class="star-rating-book " title="1/5">
+                        <div class="star-value-book" style="width: 20%"></div>
+                      </div>
                     </td>
                     <td class="text-center">{{oneStarBooks}}</td>
                   </tr>
                   <tr>
-                    <td><span class="material-icons">star</span>
-                      <span class="material-icons">star</span>
-                      <span class="material-icons">star_outline</span>
-                      <span class="material-icons">star_outline</span>
-                      <span class="material-icons">star_outline</span>
+                    <td>
+                      <div class="star-rating-book " title="2/5">
+                        <div class="star-value-book" style="width: 40%"></div>
+                      </div>
                     </td>
                     <td class="text-center">{{twoStarBooks}}</td>
                   </tr>
                   <tr>
-                    <td><span class="material-icons">star</span>
-                      <span class="material-icons">star</span>
-                      <span class="material-icons">star</span>
-                      <span class="material-icons">star_outline</span>
-                      <span class="material-icons">star_outline</span>
+                    <td>
+                      <div class="star-rating-book " title="1/5">
+                        <div class="star-value-book" style="width: 60%"></div>
+                      </div>
                     </td>
                     <td class="text-center">{{threeStarBooks}}</td>
                   </tr>
                   <tr>
-                    <td><span class="material-icons">star</span>
-                      <span class="material-icons">star</span>
-                      <span class="material-icons">star</span>
-                      <span class="material-icons">star</span>
-                      <span class="material-icons">star_outline</span>
+                    <td>
+                      <div class="star-rating-book " title="1/5">
+                        <div class="star-value-book" style="width: 80%"></div>
+                      </div>
                     </td>
                     <td class="text-center">{{fourStarBooks}}</td>
                   </tr>
                   <tr>
-                    <td><span class="material-icons">star</span>
-                      <span class="material-icons">star</span>
-                      <span class="material-icons">star</span>
-                      <span class="material-icons">star</span>
-                      <span class="material-icons">star</span>
+                    <td>
+                      <div class="star-rating-book " title="1/5">
+                        <div class="star-value-book" style="width: 100%"></div>
+                      </div>
                     </td>
                     <td class="text-center">{{fiveStarBooks}}</td>
                   </tr>
