abstract base service was created and components were adapted for it

--- a/frontend/src/app/views/book-page/book-page.component.css
+++ b/frontend/src/app/views/book-page/book-page.component.css
@@ -79,8 +79,8 @@ ul {
 }
 
 .truncate.truncated {
-  white-space: initial;
-  width: 500px;
+  white-space: pre-line;
+  width: 95%;
 }
 
 .truncate.truncated .help-icon-down {
