--- a/frontend/src/app/views/author/author.component.html
+++ b/frontend/src/app/views/author/author.component.html
@@ -53,7 +53,7 @@
                       </select>
                     </div>
                     <div class="col-md-4 text-end">
-                      <button [disabled]="filterForm.invalid" type="submit" class="btn btn-outline-primary"
+                      <button [disabled]="filterForm.untouched || filterForm.pristine" type="submit" class="btn btn-outline-primary"
                               style="width: 90px">SEARCH
                       </button>
                       <button type="button" (click)="resetForm(filterForm)" class="btn btn-outline-dark"
