possibility to escape by buttons from modal window was removed

--- a/frontend/src/app/views/author/author.component.html
+++ b/frontend/src/app/views/author/author.component.html
@@ -241,7 +241,7 @@
   </div>
 </div>
 
-<div class="modal fade text-left" id="createAuthorModal" data-backdrop="static" tabindex="-1" role="dialog"
+<div class="modal fade text-left" id="createAuthorModal" data-keyboard="false" data-backdrop="static" tabindex="-1" role="dialog"
      aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable" role="document">
     <div class="modal-content">
@@ -289,7 +289,7 @@
   </div>
 </div>
 
-<div class="modal fade text-left" id="updateAuthorModal" data-backdrop="static" tabindex="-1" role="dialog"
+<div class="modal fade text-left" id="updateAuthorModal" data-keyboard="false" data-backdrop="static" tabindex="-1" role="dialog"
      aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable" role="document">
     <div class="modal-content">
