--- a/frontend/src/app/views/book/book.component.html
+++ b/frontend/src/app/views/book/book.component.html
@@ -221,7 +221,7 @@
                (page)="onPageChange($event)" aria-label="Select page" style="visibility: hidden">
 </mat-paginator>
 
-<div class="modal fade text-left" id="createBookModal" data-backdrop="static" tabindex="-1" role="dialog"
+<div class="modal fade text-left" id="createBookModal" data-keyboard="false" data-backdrop="static" tabindex="-1" role="dialog"
      aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable" role="document">
     <div class="modal-content">
@@ -313,7 +313,7 @@
   </div>
 </div>
 
-<div class="modal fade text-left" id="updateBookModal" data-backdrop="static" tabindex="-1" role="dialog"
+<div class="modal fade text-left" id="updateBookModal" data-keyboard="false" data-backdrop="static" tabindex="-1" role="dialog"
      aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable" role="document">
     <div class="modal-content">
