--- a/frontend/src/app/views/book-page/book-page.component.html
+++ b/frontend/src/app/views/book-page/book-page.component.html
@@ -121,7 +121,7 @@
                (page)="onPageChange($event)" aria-label="Select page" style="visibility: hidden">
 </mat-paginator>
 
-<div class="modal fade text-left" id="createReviewModal" data-backdrop="static" tabindex="-1" role="dialog"
+<div class="modal fade text-left" id="createReviewModal" data-keyboard="false" data-backdrop="static" tabindex="-1" role="dialog"
      aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable" role="document">
     <div class="modal-content">
