changed icon, removed link on reviews page

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -13,9 +13,9 @@
         <li class="nav-item" role="presentation">
           <a class="nav-link navbar-brand"  data-toggle="tab" routerLink="books" role="tab" aria-controls="contact" aria-selected="false">Books</a>
         </li>
-        <li class="nav-item" role="presentation">
-          <a class="nav-link navbar-brand"  data-toggle="tab" routerLink="reviews" role="tab" aria-controls="contact" aria-selected="false">Reviews</a>
-        </li>
+<!--        <li class="nav-item" role="presentation">-->
+<!--          <a class="nav-link navbar-brand"  data-toggle="tab" routerLink="reviews" role="tab" aria-controls="contact" aria-selected="false">Reviews</a>-->
+<!--        </li>-->
       </ul>
     </nav>
     <!-- End Navbar -->
