--- a/frontend/src/app/views/book-page/book-page.component.html
+++ b/frontend/src/app/views/book-page/book-page.component.html
@@ -31,11 +31,12 @@
               </div>
             </div>
             <div class="col-6" style="margin-bottom: 10px">
-              <button class="btn btn-outline-primary" (click)="backInBrowserHistory()" >BACK
+              <button class="btn btn-outline-primary" (click)="backInBrowserHistory()">BACK
               </button>
             </div>
             <div class="col-6 text-end" style="margin-bottom: 10px">
-              <button *ngIf="previousUrl != '/main'" class="btn btn-outline-primary" data-toggle="modal" data-target="#createReviewModal"
+              <button *ngIf="previousUrl != '/main'" class="btn btn-outline-primary" data-toggle="modal"
+                      data-target="#createReviewModal"
                       style="width: 120px">ADD REVIEW
               </button>
             </div>
@@ -69,8 +70,10 @@
                     <a type="button" class="help-icon-down fa" (click)="toggleClassForComment('review'+review.id)"
                        style="color: #435ebe">More</a>
                   </div>
-                  <a type="button" class="help-icon-up fa" (click)="toggleClassForComment('review'+review.id)"
-                     style="color: #435ebe">Hide</a>
+                  <div>
+                    <a type="button" class="help-icon-up fa" (click)="toggleClassForComment('review'+review.id)"
+                       style="color: #435ebe">Hide</a>
+                  </div>
                 </div>
               </div>
             </div>
@@ -121,7 +124,8 @@
                (page)="onPageChange($event)" aria-label="Select page" style="visibility: hidden">
 </mat-paginator>
 
-<div class="modal fade text-left" id="createReviewModal" data-keyboard="false" data-backdrop="static" tabindex="-1" role="dialog"
+<div class="modal fade text-left" id="createReviewModal" data-keyboard="false" data-backdrop="static" tabindex="-1"
+     role="dialog"
      aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable" role="document">
     <div class="modal-content">
@@ -163,8 +167,8 @@
               <div class="form-group">
                 <label for="commenterName">Commenter Name*</label>
                 <input type="text" id="commenterName" class="form-control" ngModel name="commenterName"
-                       #commenterName="ngModel" placeholder="Commenter name" minlength="1" maxlength="128"
-                       pattern="((?:\s*[A-Za-z0-9_]\s*){1,128})$" required>
+                       #commenterName="ngModel" minlength="1" maxlength="128"
+                       pattern="((?:\s*[A-Za-z0-9а-яА-ЯіІєЄїЇ]\s*){1,128})$" required>
                 <div *ngIf="commenterName.invalid && (commenterName.dirty || commenterName.touched)"
                      class="alert alert-danger" style="padding: 5px">
                   <div *ngIf="commenterName.errors?.required || commenterName.errors?.pattern">
@@ -176,14 +180,7 @@
             <div class="row">
               <div class="form-group">
                 <label for="comment">Comment* </label>
-                <textarea type="text" id="comment" class="form-control" ngModel name="comment"
-                          #reviewComment="ngModel" placeholder="Comment" minlength="1" required></textarea>
-                <div *ngIf="reviewComment.value.trim().length === 0 && (reviewComment.dirty || reviewComment.touched)"
-                     class="alert alert-danger" style="padding: 5px">
-                  <div *ngIf="reviewComment.errors?.required || reviewComment.errors?.pattern">
-                    Wrong comment.
-                  </div>
-                </div>
+                <textarea type="text" id="comment" class="form-control" ngModel name="comment"></textarea>
               </div>
               <div class="form-group">
                 <input hidden type="text" [ngModel]="book" name="book" class="form-control" value="{{book}}">
